# gles3-

./: THImageLibrary  local.properties  settings.gradle
app/: build.gradle
app/src/main/: jniLibs
app/src/main/assets/ShaderES2/: shader.frag
app/src/main/assets/ShaderES3/: shader.vert  shaderBitTrue.frag  shaderClone.frag  shaderDiamondPentile.frag  shaderDiamondPentile.vert  shaderHistogram.frag  shaderHistogram.vert  shaderHoleRefine.frag  shaderLTI.frag  shaderLTI.vert  shaderPostFilter.frag  shaderPostFilter.vert  shaderRGBStripe.frag  shaderRunLPFDepth.frag  shaderRunMaxMove.frag  shadervs.frag
app/src/main/cpp/: CMakeLists.txt  RendererES2.cpp  RendererES3.cpp  gles3jni.cpp  gles3jni.h
app/src/main/java/com/android/gles3jni/: ApplicationManager.java  GLES3JNIActivity.java  GLES3JNILib.java  GLES3JNIView.java
openCVLibrary320/sdk/java/: build.gradle
openCVLibrary320/sdk/java/gradle/wrapper/: gradle-wrapper.properties
